# deplob

./: .gitignore  CLAUDE.md  CP4101-final.tex  Cargo.toml  interim.tex  withdraw_vkey.txt  withdrawal_data.json
cli/: Cargo.toml
cli/src/: cancel.rs  config.rs  deposit.rs  indexer.rs  main.rs  order.rs  settlement.rs  withdraw.rs
contracts/: .gitignore  foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  DeployWithExistingTokens.s.sol
contracts/src/: DePLOB.sol  MerkleTreeWithHistory.sol  TestToken.sol
contracts/src/interfaces/: IDePLOB.sol
contracts/test/: DePLOB.t.sol  DepositE2E.t.sol  MerkleTree.t.sol  WithdrawE2E.t.sol
contracts/test/mocks/: ERC20Mock.sol  MockDcapVerifier.sol  MockSP1Verifier.sol
docs/: 01-problem-statement.md  02-preliminary-knowledge.md  03-system-architecture.md  04-operations.md  05-flaws-and-improvements.md  README.md
docs/impl/: 00-overview.md  01-environment-setup.md  02-cryptographic-primitives.md  03-smart-contract-foundation.md  04-deposit-system.md  05-withdrawal-system.md  06-order-creation.md  07-order-cancellation.md  08-order-matching.md  09-testing.md  10-frontend-integration.md  11-sgx-tee.md
e2e/: .env.local  .env.sepolia  01_deposit_withdraw.sh  02_order_cancel.sh  03_match_settle.sh  setup_attestation.sh
presentation/: index.html
sp1-programs/deposit/: README.md
sp1-programs/deposit/program/: Cargo.toml
sp1-programs/deposit/program/elf/: riscv32im-succinct-zkvm-elf
sp1-programs/deposit/program/src/: main.rs
sp1-programs/deposit/script/: Cargo.toml  build.rs  deposit_note.json
sp1-programs/deposit/script/src/: main.rs
sp1-programs/lib/deplob-core/: Cargo.toml
sp1-programs/lib/deplob-core/src/: commitment.rs  keccak.rs  lib.rs  merkle.rs
sp1-programs/withdraw/: README.md
sp1-programs/withdraw/program/: Cargo.toml
sp1-programs/withdraw/program/elf/: riscv32im-succinct-zkvm-elf
sp1-programs/withdraw/program/src/: main.rs
sp1-programs/withdraw/script/: Cargo.toml  build.rs  withdrawal_data.json
sp1-programs/withdraw/script/src/: main.rs
tee/: Cargo.toml  Dockerfile
tee/gramine/: Dockerfile  Makefile  deplob-tee.manifest.template
tee/src/: attestation.rs  chain.rs  main.rs  state.rs  types.rs  verification.rs
tee/src/matching/: mod.rs
tee/src/orderbook/: mod.rs
tee/src/routes/: attestation.rs  mod.rs  orders.rs  settlements.rs
tee/src/settlement/: mod.rs
