[workspace]
resolver = "2"
members = [
    "sp1-programs/deposit/script",
    "sp1-programs/withdraw/program",
    "sp1-programs/withdraw/script",
    # "sp1-programs/create-order/program",
    # "sp1-programs/create-order/script",
    # "sp1-programs/cancel-order/program",
    # "sp1-programs/cancel-order/script",
    "sp1-programs/lib/deplob-core",
    "tee",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# SP1
sp1-zkvm = "6.0.2"
sp1-sdk = { version = "6.0.2", features = ["network"] }
sp1-build = "6.0.2"

# Alloy (Ethereum types)
alloy-primitives = "1.0"
alloy-sol-types = "1.0"

# Crypto
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random
rand = "0.8"
