[package]
name = "deplob-tee"
version.workspace = true
edition.workspace = true

[[bin]]
name = "deplob-tee"
path = "src/main.rs"

[dependencies]
deplob-core = { path = "../sp1-programs/lib/deplob-core" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = { workspace = true }
async-trait = { workspace = true }
alloy = { version = "0.7", features = [
    "providers",
    "contract",
    "rpc-types",
    "signers",
    "signer-local",
    "network",
    "transport-http",
] }
