[package]
name = "deposit-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deposit-script"
path = "src/main.rs"

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"

[dependencies]
sp1-sdk = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
hex = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
deplob-core = { path = "../../lib/deplob-core" }

[build-dependencies]
sp1-helper = { workspace = true }
