[package]
name = "deposit-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deposit-script"
path = "src/main.rs"

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"

[dependencies]
deplob-core = { path = "../../lib/deplob-core" }
serde_json = "1.0"
serde = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
